Fixed button layout problem

--- a/symo/content/game.css
+++ b/symo/content/game.css
@@ -18,7 +18,7 @@ text-align: center;
 #content{
 text-align: center;
 border: 2px inset gray;
-height:450px;
+height:500px;
 }
 
 nav{
@@ -195,7 +195,7 @@ nav{
 
 #overlay iframe {
      width:900px;
-     height: 450px;
+     height: 500px;
      margin: 100px auto;
      background-color: #fff;
      border:1px solid #000;
